@@ -1,5 +1,6 @@
 2014-01-XX   2.2.8:
 -------------------
+  * add check for chrpath (on Linux) before build is started, see issue #469
   * fixed issue #467
   * conda build: fixed ELF headers not being recognized on Python 3
 
